--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -42,14 +42,14 @@
   .wrapper {
     margin-left: 35px;
     margin-right: 35px;
-    margin-top: 0px;
+    margin-top: 4vw;
   }
   
   .content {
     margin-bottom: 120px;
     display: flex;
     flex-wrap: wrap;
-    grid-gap: 40px;
+    grid-gap: 30px;
   }
   
   .contacts {
